# houseProjectProiectareGrafica

./: CMakeLists.txt  DebugRenderer.cpp  DebugRenderer.h  build.bat  main.cpp
resources/models/ceiling/: roofFixed.mtl
resources/models/floor/: floorFixed.mtl
resources/models/furniture/: DoorGoodPos1.mtl  lamp.mtl  sofa.mtl  table.mtl
resources/models/ground/: Hazelnut.mtl
resources/models/interior/: wallsFixed.mtl
resources/shaders/: basic.frag  basic.vert  depth.frag  depth.vert  skybox.frag  skybox.vert
src/: ObjModel.cpp  ObjModel.h
